--- a/public/assets/css/digital-marketing.css
+++ b/public/assets/css/digital-marketing.css
@@ -298,7 +298,7 @@ select:visited {
   border-radius: 5px;
   font-family: "Lexend";
   display: inline-block;
-  background-image: linear-gradient(160deg, #4b3eff 0%, #22b1ff 99%);
+  background-image: linear-gradient(160deg, #e9460b 0%, #ed4306 99%);
 }
 .app-dm-btn a:before {
   width: 100px;
@@ -309,7 +309,7 @@ select:visited {
   z-index: -1;
   position: absolute;
   border-radius: 20px;
-  background-color: #3848ee;
+  background-color: #ee8438;
   -webkit-transition: 0.3s cubic-bezier(0.24, 0.74, 0.58, 1);
   transition: 0.3s cubic-bezier(0.24, 0.74, 0.58, 1);
 }
